Actualizacion Db Context, se retiro la conexion que estaba y se dejo la de appsentings.json

--- a/WebApiSoat/appsettings.json
+++ b/WebApiSoat/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SMCLIENTEE12\\SQLEXPRESS;Initial Catalog=StoreSample;Integrated Security=SSPI"
+    "DefaultConnection": "Data Source=SMCLIENTEE12\\SQLEXPRESS;Initial Catalog=DbSoat;Integrated Security=SSPI"
   },
   "Logging": {
     "LogLevel": {
